<resources>
    <string name="app_name">风车动漫.it</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">风车动漫.it | 2019.02.16 V1.1.2</string>
    <string name="nav_header_subtitle">反馈QQ群：943543759</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_desc">desc</string>
    <string name="updesc">更新日志：\n\n
        v1.1.3| 2019.03.12\n\n
        1.修复android6.0设备闪退. \n\n
        2.最近有点忙，等有空，会处理一些播放源的问题。\n\n
        3.提醒：仅仅是风车动漫的小工具，不是播放大全。\n\n
        v1.1.2| 2019.02.28\n\n
        1.优化全屏播放. \n\n
        v1.1.1 | 2019.02.16 \n\n
        1.修复安卓9.0下，网络请求失败. \n\n
        2.修复侧滑菜单异常卡顿. \n\n
    v1.1 | 2019.02.12 \n\n
    1.修复多次搜索闪退bug n
    2.增加web播放模式 \n
    3.调整全屏播放按钮位置 \n
    4.原生播放修复全屏bug \n
    5.增加收藏功能 \n
    6.增加动漫排行榜</string>
    <string name="title_activity_play">Play</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="draw_menu_like">我的收藏</string>
    <string name="draw_menu_about">关于应用</string>
    <string name="draw_menu_update">检测更新</string>
    <string name="draw_menu_history">观看历史</string>
    <string name="draw_menu_share">分享应用</string>
    <string name="actionu_theme">换个颜色</string>
    <string name="action_menu_like">好评</string>
    <string name="author_iwh">by：IWH | 19.03.12 | v1.3.3</string>
    <string name="draw_menu_sort">最新榜单</string>
    <string name="about_author">IWH</string>
    <string name="about_github">GitHub：https://github.com/iwh718/fengcheLite</string>
    <string name="about_desc">
        简介：这是一个风车动漫爬虫，同步于风车web端，仅仅是一个小工具，由于风车动漫不提供直接播放源，所有视频都是通过接口解析而来，部分接口加密的资源采用webView播放。应用播放内容取决于风车的状态！\n\n
        所以：可能会有些内容，即时采用的webView也无法播放，部分动漫，前后采用了多种接口播放，可能会因为没有适配，播放不出来，请打开web端观看！
    </string>
    <string name="about_qq">应用使用Kotlin开发，请实验性使用部分功能 \n\n(仅提供反馈，不提供资源！)群：943543759</string>
    <string name="about_thanks">注意：本应用不提供下载，全部内容依靠风车动漫web端内容解析而来。</string>

</resources>
