<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_like"

            android:icon="@drawable/fab_like"
            android:title="@string/draw_menu_like" />
       <!-- <item
            android:id="@+id/nav_history"
            android:icon="@drawable/nav_history"
            android:title="@string/draw_menu_history" />-->
        <item
            android:id="@+id/nav_sort"
            android:icon="@drawable/nav_sort"
            android:title="@string/draw_menu_sort" />

    </group>

    <item android:title="其它">
        <menu>

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/draw_menu_share" />
            <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/nav_about"
                    android:title="@string/draw_menu_about" />
            <item
                android:id="@+id/nav_update"
                android:icon="@drawable/nav_update"
                android:title="@string/draw_menu_update" />
        </menu>
    </item>

</menu>
