<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.about">

    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">

    </ScrollView>
        <android.support.v7.widget.CardView android:layout_width="match_parent"
                                            android:layout_margin="10dp"
                                            android:elevation="6dp"
                                            app:cardCornerRadius="10dp"
                                            android:layout_height="wrap_content">
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:padding="10dp"
                          android:orientation="vertical">
                <ImageView android:layout_width="100dp"

                           android:maxHeight="100dp"
                           android:maxWidth="100dp"
                           android:layout_gravity="center_vertical"
                           android:layout_margin="10dp"
                           android:src="@drawable/logo"
                           android:layout_height="100dp"/>
                <TextView android:layout_width="match_parent"
                          android:layout_margin="10dp"
                          android:textAlignment="center"
                          android:layout_gravity="center_vertical"
                          android:text="@string/author_iwh"
                          android:layout_height="wrap_content"/>
                <TextView android:layout_width="match_parent"
                          android:layout_margin="10dp"
                          android:text="@string/about_github"
                          android:layout_height="wrap_content"/>
                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:layout_margin="10dp"
                          android:textColor="#146608"
                android:text="@string/about_qq"/>
                <TextView android:layout_width="match_parent"
                          android:layout_margin="10dp"
                          android:text="@string/about_desc"
                          android:layout_height="wrap_content"/>
                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:textColor="#ab0000"
                android:text="@string/about_thanks"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>



</LinearLayout>